force-app/main/default/objects/QuickNotes__c/QuickNotes__c.object-meta.xml
<CustomObject>
    <description>To record the quick notes</description>
    <label>QuickNote</label>
    <nameField>
        <label>QuickNotes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QuickNotes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>