force-app/main/default/objects/QuickNotes__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>To store Quick Notes from the Lead&apos;s Quicknotes Field</description>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>