force-app/main/default/objects/QuickNotes__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>All the way to Opps</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>QuickNotes</relationshipLabel>
    <relationshipName>QuickNotes</relationshipName>
    <type>Lookup</type>
</CustomField>